[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"
authors = ["helium18 @ helium.dev@tuta.io"]
license = "GPL v3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.7.3", features=["derive"]}
libc = "0.2.112"